# pg-fts

./: .env.example  .gitignore  CLAUDE.md  Makefile  alembic.ini  catalog_search_api.py  database_schema.sql  docker-compose.yml  init.sql  metadata-search-analysis.md  models.py  pyproject.toml  requirements.txt  search_api.py  seed_data.py
alembic/versions/: 20260103_225120_48308cdeb059_create_owners_schemas_tables_and_.py  20260103_231344_3f300c263188_add_search_vectors_and_indexes_for_full_.py  20260103_231425_9449339023ee_add_catalog_search_function.py  20260103_233158_bf22d91ea9e2_fix_search_function_ambiguous_column_.py
